--- a/Practice/Practice/Practice.vcxproj
+++ b/Practice/Practice/Practice.vcxproj
@@ -146,8 +146,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="practice.cpp" />
-    <ClCompile Include="tower.cpp" />
+    <ClCompile Include="isAscOrder.cpp" />
+    <ClCompile Include="towerBuilder.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
